runned rewriteRun gradel